# log-visualization-starter

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/output/: records.csv  summary.csv
src/log_visualization_starter/: __init__.py  cli.py  parser.py  pipeline.py  svg.py
tests/: test_pipeline.py
